# RetroOS

./: .bazelrc  .gitignore  BLOCK_LAYER_DESIGN.md  BOOTING.md  BUILD.bazel  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  DESIGN.md  EXPLANATION.md  LICENSE  MODULE.bazel  Makefile  OUTLOOK.md  README.md  ROADMAP.md  SOUND_LIB_DESIGN.md  THIRD_PARTY_LICENSES.md  TODO.md  align.py  cargo-bazel-lock.json  depend.sh  duke3d.out  duke3d_main.out  gen-rust-project.sh  hexen.out  hostfs.py  make_ext4_test.sh  make_freedos_image.sh  run.sh  run_86box.sh  run_bochs.sh  run_interp.sh  run_qemu.sh  run_test.sh  run_uefi.sh  run_uefi_bochs.sh  setup-cdrive.sh  vncstub.py  x86_64-retro-none.json
apps-boot/command/: BUILD.bazel  LOADFIX.CFG  command.c  makefile
apps/dn/: BUILD.bazel  DN.EXT  DN.HIS
apps/dosrt/: .gitignore  BUILD.bazel  build_host.sh  interp_tcc.sh  qemu_tcc.sh  retro.bzl
apps/dosrt/hello/: hello.ld
apps/dosrt/hello/src/: main.rs
apps/dosrt/modplay/: modplay.ld
apps/dosrt/modplay/src/: main.rs
apps/dosrt/rloader/: rloader.ld
apps/dosrt/rloader/src/: main.rs
apps/dosrt/src/: lib.rs
apps/dosrt/stub/: stub.c
apps/games/: BUILD.bazel
apps/games/DOOMS/: DEFAULT.CFG  DEFAULT.CFG.bak  gusgonna.wad
apps/games/DUKE3D/: DEFS.CON  DEMO1.DMO  DEMO2.DMO  DEMO3.DMO  DUKE3D.CFG  GAME.CON  LICENSE.DOC  MODEM.PCK  ORDER.FRM  README.DOC  ULTRAMID.INI  USER.CON
apps/games/HOCUS/: APOGEE.BAT  HOCUS.SAV  HOCUSG.BAT  ORDER.FRM  VENDOR.DOC
apps/games/ROTT/: 3DRORDER.FRM  APOGEE.BAT  BATTLE.ROT  CONFIG.ROT  MODEM.PCK  ORDER.FRM  SETUP.ROT  SOUND.ROT  VENDOR.DOC
apps/games/TIEDEMO/: FLIGHT.HLP  LANDRU.CFG  READ.ME  TIEDEMO.BAT
apps/games/TIEDEMO/RESOURCE/: SPECIES.LFD
apps/games/WACKY/: MODEM.PCK  VENDOR.DOC  WACKY.CFG
apps/games/digger/: digger.txt
apps/games/digger/src/: WinDig.rc  armsup.c  (+47 more)
apps/games/keen1/: GO.BAT  SAVED1.CK1  SAVED2.CK1  SAVED3.CK1  SAVED4.CK1  SCORES.CK1
apps/games/keen4/: CONFIG.CK4  SAVEGAM0.CK4
apps/games/omf/: MDRV004R.MUS  SETUP.CFG  SETUP.INI
apps/games/raptor/: FILE0000.GLB  FILE0001.GLB  ORDER.FRM  SETUP.INI  VENDOR.DOC
apps/games/skyroads/: readme.txt
apps/gus/: BUILD.bazel
apps/hello_com/: BUILD.bazel  TEST.BAT  TEST.COM  command.asm
apps/init/: BUILD.bazel
apps/init/src/: main.rs
apps/shell/: BUILD.bazel
apps/shell/src/: main.rs
apps/stress/: BUILD.bazel
apps/stress/src/: main.rs
apps/wolf3d/: BUILD.bazel  CONFIG.WL6
arch-abi/: BUILD.bazel  Cargo.toml
arch-abi/src/: arch.rs  lib.rs  monitor.rs
arch-interp/: BUILD.bazel  Cargo.toml  README.md
arch-interp/bios/: bios.c
arch-interp/src/: backend.rs  bios.rs  calls.rs  cpu.rs  desc.rs  devices.rs  display.rs  engine.rs  hostfs.rs  lib.rs  machine.rs  main.rs  mmu.rs  monitor.rs  net.rs  paging.rs  phys.rs  screendump.rs  space.rs  sysdesc.rs  tty.rs  vcpu.rs  vga.rs  view.rs  vif_tests.rs
arch-interp/src/kvm/: mod.rs  run.rs  setup.rs  shim.rs  tests.rs
arch-interp/tests/: les_decode.rs  mmu.rs  stale_tb.rs
arch-metal/: BUILD.bazel  Cargo.toml
arch-metal/src/: backend.rs  calls.rs  cshim.rs  descriptors.rs  irq.rs  lib.rs  mem.rs  monitor.rs  paging2.rs  phys_mm.rs  traps.rs  vcpu.rs  x86.rs  xhci.rs
freedos/cwsdpmi/: BUILD.bazel  control.c  exphdlr.c  mswitch.asm  mswitch.h  tables.asm  tss.h  tss.inc
kernel/: BUILD.bazel  Cargo.toml  entry.asm  kernel.ld  metal_entry.rs
kernel/src/: descriptors.rs  elf.rs  hdd.rs  heap.rs  host_main.rs  irq.rs  lib.rs  main.rs  paging2.rs  phys_mm.rs  pipe.rs  startup.rs  syscalls.rs  thread.rs  traps.rs  vfs.rs  vga.rs  vm86.rs
kernel/src/arch/: backend.rs  boot.rs  calls.rs  descriptors.rs  entry.asm  fbcon.rs  irq.rs  mod.rs  monitor.rs  paging2.rs  phys_mm.rs  traps.rs  vcpu.rs  x86.rs
kernel/src/kernel/: ac97.rs  alc298_amp.rs  block.rs  console.rs  display.rs  dos.rs  dpmi.rs  elf.rs  exec.rs  exec_ctx.rs  ext4fs.rs  focus.rs  hda.rs  hdd.rs  heap.rs  hostfs.rs  io_policy.rs  iostat.rs  keyboard.rs  klog.rs  kpipe.rs  lwext4.rs  machine.rs  mod.rs  net.rs  nvme.rs  osd.rs  pci.rs  platform.rs  portio.rs  sched.rs  sound.rs  stacktrace.rs  startup.rs  syscalls.rs  tarfs.rs  thread.rs  vfs.rs  virtio.rs  vm86.rs
lib/: BUILD.bazel  Cargo.toml
lib/sampler/src/: lib.rs  tests.rs  voice.rs  volume.rs
lib/sound/src/: gus.rs  lib.rs  midi.rs  mpu401.rs  opl.rs  pat.rs  sb.rs  speaker.rs
lib/src/: elf.rs  heap.rs  lib.rs  md5.rs  tar.rs  vga.rs  vga_font_8x16.rs  vga_fonts.rs  vga_render.rs
lib/tests/: vga_render.rs
play/: BUILD.bazel  Cargo.toml
play/src/: display.rs  main.rs
retro-rs/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  ROADMAP.md  gen-rust-project.sh  generate-rust-project.sh  i686-retro-none.json  run.sh  run_qemu.sh
retro-rs/apps/hello64/: BUILD.bazel  user64.ld
retro-rs/apps/hello_com/: BUILD.bazel  hello.asm
retro-rs/apps/init/: BUILD.bazel  init.asm  init.ld
retro-rs/apps/printmsg/: BUILD.bazel
retro-rs/apps/stress/: BUILD.bazel
retro-rs/apps/stress64/: BUILD.bazel
retro-rs/boot/: BUILD.bazel
retro-rs/boot/src/: lib.rs
retro-rs/crt/: BUILD.bazel
retro-rs/crt/src/: lib.rs
retro-rs/kernel/: BUILD.bazel  entry.asm  kernel.ld
retro-rs/kernel/src/: descriptors.rs  elf.rs  hdd.rs  heap.rs  irq.rs  lib.rs  paging2.rs  phys_mm.rs  stacktrace.rs  startup.rs  syscalls.rs  thread.rs  traps.rs  vm86.rs  x86.rs
retro-rs/lib/: BUILD.bazel
retro-rs/lib/src/: elf.rs  lib.rs  md5.rs  vga.rs
retro-rs/rules/: BUILD.bazel  bootloader.bzl  defs.bzl
retro-rs/stdlib/: BUILD.bazel  compiler_builtins.BUILD  rust_src.BUILD  rustc_demangle.BUILD
retro-rs/toolchain/: BUILD.bazel  bare_cc_toolchain_config.bzl  bootstrap.bzl
stdlib/: BUILD.bazel  bitflags.BUILD  compiler_builtins.BUILD  crc.BUILD  crc_catalog.BUILD  ext4_view.BUILD  nuked_opl3.BUILD  nuked_opl3_no_std.patch  rust_src.BUILD  spin.BUILD
toolchain/: BUILD.bazel  clippy_driver_wrapper.sh  musl_transition.bzl  retro_platform.bzl  rust_toolchain.BUILD  transitions.bzl  unicorn-no-double-fault.patch  unicorn-store-fastpath.patch  unicorn-sys-pregen-bindings.patch  unicorn-sys-runtime-manifest-dir.patch
(+224 files in other folders)
