load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_mklink")

exports_files(["i686-retro-none.json"])

# Convenient applet shims for busybox: each is a tar symlink "bin/<name>"
# pointing at "busybox" (relative within /bin), so PATH=/bin lookup of
# `ls`, `cat`, etc. resolves to the busybox binary which dispatches via
# basename(argv[0]).
_BUSYBOX_APPLETS = [
    "ls", "cat", "cp", "mv", "rm", "mkdir", "rmdir", "ln", "touch",
    "echo", "printf", "pwd", "true", "false",
    "grep", "sed", "awk", "wc", "sort", "uniq", "head", "tail", "cut", "tr",
    "find", "du", "df", "stat", "chmod",
    "ps", "kill", "sleep", "time", "id", "tty", "uname",
    "cmp", "diff", "tar", "gzip", "gunzip", "dd",
    "vi", "ed", "more", "less",
    "sh", "ash", "env", "which", "test", "[",
]

[pkg_mklink(
    name = "lnk_bin_" + a,
    link_name = "bin/" + a,
    target = "busybox",
) for a in _BUSYBOX_APPLETS]

# Pristine drop-in dirs: contents auto-shipped under the given DOS prefix.
# Drop files into apps/tc/ or apps/TP70/ and they appear at C:\TC\... or
# C:\TP70\... in the image on the next build — no per-file wiring.
_TC_SRCS = glob(["apps/tc/**/*"], allow_empty = True)
_TP70_SRCS = glob(["apps/TP70/**/*"], allow_empty = True)

pkg_tar(
    name = "tc_tar",
    files = {":" + s: "TC/" + s[len("apps/tc/"):].upper() for s in _TC_SRCS},
)

pkg_tar(
    name = "tp70_tar",
    files = {":" + s: "TP70/" + s[len("apps/TP70/"):].upper() for s in _TP70_SRCS},
)

# Compute MD5 of kernel ELF
genrule(
    name = "kernel_md5",
    srcs = ["//kernel:kernel_elf"],
    outs = ["kernel.elf.md5"],
    cmd = "md5sum $< | cut -d' ' -f1 | xxd -r -p > $@",
)

# Base files (open source). Layout:
#   - root: bootloader, kernel, COMMAND.COM, CWSDPMI.EXE, shell.elf, DN/...
#   - GAMES/...: games
#   - TESTS/...: test programs and example .COM/.ELF binaries
_BASE_FILES = {
    "//boot:bootloader_bin": "A",
    ":kernel_md5": "kernel.elf.md5",
    "//kernel:kernel_elf": "kernel.elf",
    "//apps/shell:shell_elf": "shell.elf",
    # CWSDPMI.EXE deliberately omitted from the RetroOS image — RetroOS
    # provides DPMI natively. The build artifact ships in the FreeDOS apps
    # disk only (see make_freedos_image.sh).
    # COMMAND.COM is built at boot by TC compiling SRC/COMMAND.C —
    # output lands in the VFS RAM overlay at /COMMAND.COM. No prebuilt
    # binary in the tar.
    "//apps/command:command.c":          "SRC/COMMAND.C",
    "//apps/command:LOADFIX.CFG":        "LOADFIX.CFG",
    "freedos/dos32a/dos32a.exe":         "DOS32A.EXE",
    "apps/dn/DN.COM": "DN/DN.COM",
    "apps/dn/DN.PRG": "DN/DN.PRG",
    "apps/dn/DN.OVR": "DN/DN.OVR",
    "apps/dn/DN.DLG": "DN/DN.DLG",
    "apps/dn/DN.LNG": "DN/DN.LNG",
    "apps/dn/DN.HLP": "DN/DN.HLP",
    "apps/dn/DN.EDT": "DN/DN.EDT",
    "apps/dn/DN.EXT": "DN/DN.EXT",
    "apps/dn/DN.HGL": "DN/DN.HGL",
    "apps/dn/DN.MNU": "DN/DN.MNU",
    "apps/dn/DN.VWR": "DN/DN.VWR",
    "apps/dn/DN.XRN": "DN/DN.XRN",
    "apps/dn/DN.FLG": "DN/DN.FLG",
    "apps/dn/DN.HIS": "DN/DN.HIS",
    # Tests
    "//apps/tests/printmsg:printmsg_elf":   "TESTS/printmsg.elf",
    "//apps/tests/stress:stress_elf":       "TESTS/stress.elf",
    "//apps/tests/stress64:stress64_elf":   "TESTS/stress64.elf",
    "//apps/tests/hello_com:hello_com":     "TESTS/HELLO.COM",
    "//apps/tests/gfx_com:gfx_com":         "TESTS/GFX.COM",
    "//apps/tests/gfx_cga:gfx_cga":         "TESTS/GFX_CGA.COM",
    "//apps/tests/hello_com:TEST.BAT":      "TESTS/TEST.BAT",
    "//apps/tests/trexec:trexec_com":       "TESTS/TREXEC.COM",
    "//apps/tests/hello32_linux:hello32_linux": "TESTS/HI.ELF",
    "//apps/tests/hello64_linux:hello64_linux": "TESTS/HI64.ELF",
    # Static i686 busybox — single-binary Unix userland (sh + coreutils).
    # Standalone-shell mode dispatches applets via basename(argv[0]); the
    # binary's compiled-in re-exec path is /bin/busybox, hence the location.
    "//apps/busybox:busybox":               "bin/busybox",
}

# Public image (shareware only). Games auto-globbed from //apps/games.
# apps/tc and apps/TP70 are empty by default — drop in toolchain files to
# enable the in-OS self-build of COMMAND.COM at boot, or to ship Turbo Pascal.
pkg_tar(
    name = "fs_tar",
    files = _BASE_FILES,
    srcs = [":lnk_bin_" + a for a in _BUSYBOX_APPLETS],
    deps = [
        "//apps/games:tar",
        ":tc_tar",
        ":tp70_tar",
    ],
)

# Full image with proprietary binaries (auto-globbed from //apps-proprietary).
pkg_tar(
    name = "fs_tar_proprietary",
    files = _BASE_FILES,
    srcs = [":lnk_bin_" + a for a in _BUSYBOX_APPLETS],
    deps = [
        "//apps/games:tar",
        ":tc_tar",
        ":tp70_tar",
        "//apps-proprietary:tar",
    ],
)

# Strip first 512 bytes (TAR header) so bootloader starts at offset 0
genrule(
    name = "image",
    srcs = [":fs_tar"],
    outs = ["image.bin"],
    cmd = "tail -c +513 $< > $@ && truncate -s 64M $@",
)

genrule(
    name = "image_proprietary",
    srcs = [":fs_tar_proprietary"],
    outs = ["image_proprietary.bin"],
    cmd = "tail -c +513 $< > $@ && truncate -s 256M $@",
)

# Image with ext4 test partition
genrule(
    name = "image_ext4",
    srcs = [":image"],
    outs = ["image_ext4.bin"],
    cmd = """
        cp $< $@
        chmod +w $@

        # Read TAR partition LBA from MBR entry 1
        TAR_LBA=$$(python3 -c "
import struct
data = open('$@','rb').read(512)
print(struct.unpack_from('<I', data, 0x1C6)[0])
        ")

        # ext4 partition: start at sector 16384 (8MB), 48MB size
        EXT4_START=16384
        EXT4_SECTORS=98304

        # Populate test files
        POPULATE=$$(mktemp -d)
        mkdir -p "$$POPULATE/GAMES"
        echo "Hello from ext4!" > "$$POPULATE/HELLO.TXT"
        echo "This is a test file on the ext4 partition." > "$$POPULATE/GAMES/README.TXT"
        printf '\\xB4\\x09\\xBA\\x0C\\x01\\xCD\\x21\\xB8\\x00\\x4C\\xCD\\x21Hello from ext4!\\x24' > "$$POPULATE/GAMES/TEST.COM"

        # Create ext4 filesystem image
        EXT4_IMG=$$(mktemp)
        dd if=/dev/zero of="$$EXT4_IMG" bs=512 count=$$EXT4_SECTORS 2>/dev/null
        mkfs.ext4 -q -b 1024 -L "RetroTest" -d "$$POPULATE" "$$EXT4_IMG"
        rm -rf "$$POPULATE"

        # Write ext4 into disk image
        dd if="$$EXT4_IMG" of="$@" bs=512 seek=$$EXT4_START conv=notrunc 2>/dev/null
        rm "$$EXT4_IMG"

        # Patch MBR partition entry 2 (at 0x1CE)
        python3 -c "
import struct
with open('$@', 'r+b') as f:
    f.seek(0x1CE)
    f.write(struct.pack('<BBBBBBBBII',
        0x00, 0,0,0, 0x83, 0,0,0,
        $$EXT4_START, $$EXT4_SECTORS))
        "
    """,
)

# FAT16 data disk for FreeDOS (all apps from the proprietary TAR)
genrule(
    name = "freedos_apps",
    srcs = [
        ":fs_tar_proprietary",
        "freedos/quake/CWSDPMI.EXE",
        "freedos/ctmouse/CTMOUSE.EXE",
    ],
    outs = ["freedos_apps.img"],
    cmd = """
        IMG="$$(pwd)/$@"
        # Create 256MB FAT16 superfloppy
        dd if=/dev/zero of="$$IMG" bs=1M count=256 status=none
        mformat -i "$$IMG" -c 8 -h 16 -s 63 -T $$((256 * 2048)) ::

        # Extract TAR and copy files to FAT image
        TMPDIR=$$(mktemp -d)
        tar xf "$$(pwd)/$(location :fs_tar_proprietary)" -C "$$TMPDIR"
        # Skip non-DOS files (kernel, ELF binaries, md5, bootloader)
        cd "$$TMPDIR"
        for f in $$(find . -type f | sort); do
            # Skip kernel/bootloader/ELF/linux files
            case "$$f" in
                ./A|./kernel.elf|./kernel.elf.md5|./shell.elf) continue ;;
                ./TESTS/printmsg.elf|./TESTS/stress.elf|./TESTS/stress64.elf) continue ;;
                ./TESTS/HI.ELF|./TESTS/HI64.ELF) continue ;;
            esac
            DIR=$$(dirname "$$f" | sed 's|^\\./||')
            if [ "$$DIR" != "." ]; then
                # Create all parent dirs
                P=""
                IFS=/; for COMP in $$DIR; do
                    P="$${P:+$$P/}$$COMP"
                    mmd -D s -i "$$IMG" "::$$P" 2>/dev/null || true
                done
                unset IFS
            fi
            mcopy -D o -i "$$IMG" "$$f" "::$$f" 2>/dev/null || true
        done
        cd - >/dev/null
        rm -rf "$$TMPDIR"

        # Drop CWSDPMI.EXE at D:\\ root so it's on the PATH for any DOS/4GW
        # game (DOS/4GW probes a loaded DPMI host before falling back to its
        # own embedded mode-switching). Run `CWSDPMI -p` in AUTOEXEC.BAT or
        # the prompt to load it resident before launching the game.
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/quake/CWSDPMI.EXE" "::CWSDPMI.EXE"

        # FreeDOS CTMOUSE driver at D:\\CTMOUSE.EXE. Run `CTMOUSE` before
        # launching mouse-aware games (e.g. Indy: Fate of Atlantis) to
        # install an INT 33h handler.
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/ctmouse/CTMOUSE.EXE" "::CTMOUSE.EXE"
    """,
)

# GRUB bootable ISO (requires grub-mkrescue and mtools)
# Boot: qemu -cdrom retroos_grub.iso -drive file=image_ext4.bin,snapshot=on -boot order=d
genrule(
    name = "grub_iso",
    srcs = ["//kernel:kernel_elf"],
    outs = ["retroos_grub.iso"],
    cmd = """
        DIR=$$(mktemp -d)
        mkdir -p "$$DIR/boot/grub"
        cp $< "$$DIR/boot/kernel.elf"
        cat > "$$DIR/boot/grub/grub.cfg" << 'GRUBCFG'
set timeout=1
insmod vbe
insmod vga
set gfxpayload=text
menuentry "RetroOS" {
    multiboot /boot/kernel.elf
    boot
}
GRUBCFG
        grub-mkrescue -o $@ "$$DIR"
        rm -rf "$$DIR"
    """,
)

# Run QEMU with the disk image
sh_binary(
    name = "run",
    srcs = ["run_qemu.sh"],
    data = [":image"],
)
