load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_mklink")

exports_files(["i686-retro-none.json"])

# Convenient applet shims for busybox: each is a tar symlink "bin/<name>"
# pointing at "busybox" (relative within /bin), so PATH=/bin lookup of
# `ls`, `cat`, etc. resolves to the busybox binary which dispatches via
# basename(argv[0]).
_BUSYBOX_APPLETS = [
    "ls", "cat", "cp", "mv", "rm", "mkdir", "rmdir", "ln", "touch",
    "echo", "printf", "pwd", "true", "false",
    "grep", "sed", "awk", "wc", "sort", "uniq", "head", "tail", "cut", "tr",
    "find", "du", "df", "stat", "chmod",
    "ps", "kill", "sleep", "time", "id", "tty", "uname",
    "cmp", "diff", "tar", "gzip", "gunzip", "dd",
    "vi", "ed", "more", "less",
    "sh", "ash", "env", "which", "test", "[",
]

[pkg_mklink(
    name = "lnk_bin_" + a,
    link_name = "bin/" + a,
    target = "busybox",
) for a in _BUSYBOX_APPLETS]

# Pristine drop-in dirs: contents auto-shipped under the given DOS prefix.
# Drop files into apps-boot/tc/ or apps/TP70/ and they appear at C:\TC\... or
# C:\TP70\... in the image on the next build — no per-file wiring.
_TC_SRCS = glob(["apps-boot/tc/**/*"], allow_empty = True)
_TP70_SRCS = glob(["apps/TP70/**/*"], allow_empty = True)

pkg_tar(
    name = "tc_tar",
    files = {":" + s: "TC/" + s[len("apps-boot/tc/"):].upper() for s in _TC_SRCS},
)

pkg_tar(
    name = "tp70_tar",
    files = {":" + s: "TP70/" + s[len("apps/TP70/"):].upper() for s in _TP70_SRCS},
)

# Compute MD5 of kernel ELF
genrule(
    name = "kernel_md5",
    srcs = ["//kernel:kernel_elf"],
    outs = ["kernel.elf.md5"],
    cmd = "md5sum $< | cut -d' ' -f1 | xxd -r -p > $@",
)

# Boot bundle (small TAR, mounted at /boot/ when ext4 is root). Holds
# everything the kernel touches before userland is up: bootloader, kernel,
# self-build sources for COMMAND.COM, DN file manager, DOS32A extender.
# Keep this tight — it caps the size of the boot partition.
_BOOT_FILES = {
    "//boot:bootloader_bin": "A",
    ":kernel_md5": "kernel.elf.md5",
    "//kernel:kernel_elf": "kernel.elf",
    # CWSDPMI.EXE deliberately omitted from the RetroOS image — RetroOS
    # provides DPMI natively. The build artifact ships in the FreeDOS apps
    # disk only (see make_freedos_image.sh).
    # COMMAND.COM is built at boot by TC compiling SRC/COMMAND.C —
    # output lands in the VFS RAM overlay at /COMMAND.COM. No prebuilt
    # binary in the tar.
    "//apps-boot/command:command.c":     "SRC/COMMAND.C",
    "//apps-boot/command:LOADFIX.CFG":   "LOADFIX.CFG",
    "freedos/dos32a/dos32a.exe":         "DOS32A.EXE",
    "apps-boot/dn/DN.COM": "DN/DN.COM",
    "apps-boot/dn/DN.PRG": "DN/DN.PRG",
    "apps-boot/dn/DN.OVR": "DN/DN.OVR",
    "apps-boot/dn/DN.DLG": "DN/DN.DLG",
    "apps-boot/dn/DN.LNG": "DN/DN.LNG",
    "apps-boot/dn/DN.HLP": "DN/DN.HLP",
    "apps-boot/dn/DN.EDT": "DN/DN.EDT",
    "apps-boot/dn/DN.EXT": "DN/DN.EXT",
    "apps-boot/dn/DN.HGL": "DN/DN.HGL",
    "apps-boot/dn/DN.MNU": "DN/DN.MNU",
    "apps-boot/dn/DN.VWR": "DN/DN.VWR",
    "apps-boot/dn/DN.XRN": "DN/DN.XRN",
    "apps-boot/dn/DN.FLG": "DN/DN.FLG",
    "apps-boot/dn/DN.HIS": "DN/DN.HIS",
}

# Extras (live on ext4 in the boot+ext4 image, or alongside boot files in the
# monolithic open-source image). Linux-personality binaries, test programs,
# and busybox.
_EXTRA_FILES = {
    "//apps/shell:shell_elf": "shell.elf",
    "//apps/tests/printmsg:printmsg_elf":   "TESTS/printmsg.elf",
    "//apps/tests/stress:stress_elf":       "TESTS/stress.elf",
    "//apps/tests/stress64:stress64_elf":   "TESTS/stress64.elf",
    "//apps/tests/hello_com:hello_com":     "TESTS/HELLO.COM",
    "//apps/tests/gfx_com:gfx_com":         "TESTS/GFX.COM",
    "//apps/tests/hello_com:TEST.BAT":      "TESTS/TEST.BAT",
    "//apps/tests/trexec:trexec_com":       "TESTS/TREXEC.COM",
    "//apps/tests/hello32_linux:hello32_linux": "TESTS/HI.ELF",
    "//apps/tests/hello64_linux:hello64_linux": "TESTS/HI64.ELF",
    # Static i686 busybox — single-binary Unix userland (sh + coreutils).
    # Standalone-shell mode dispatches applets via basename(argv[0]); the
    # binary's compiled-in re-exec path is /bin/busybox, hence the location.
    "//apps/busybox:busybox":               "bin/busybox",
}

# Monolithic file map for the open-source image and FreeDOS apps disk —
# both consume a single flat tar. The proprietary image splits these
# back into boot_bundle_tar + extras_tar_proprietary.
_BASE_FILES = dict(_BOOT_FILES)
_BASE_FILES.update(_EXTRA_FILES)

# Boot bundle: just enough to bring up DN + the in-OS TC self-build.
# Becomes partition 1 (type 0xDA); mounts at /boot/. Same bundle for both
# the open-source and proprietary images.
pkg_tar(
    name = "boot_bundle_tar",
    files = _BOOT_FILES,
    deps = [":tc_tar"],
)

# Extras populated into the ext4 partition: busybox-userland, Linux test
# ELFs, DOS games (shareware), Turbo Pascal.
pkg_tar(
    name = "extras_tar",
    files = _EXTRA_FILES,
    srcs = [":lnk_bin_" + a for a in _BUSYBOX_APPLETS],
    deps = [
        "//apps/games:tar",
        ":tp70_tar",
    ],
)

# Same extras plus the proprietary game/tooling drop.
pkg_tar(
    name = "extras_tar_proprietary",
    files = _EXTRA_FILES,
    srcs = [":lnk_bin_" + a for a in _BUSYBOX_APPLETS],
    deps = [
        "//apps/games:tar",
        ":tp70_tar",
        "//apps-proprietary:tar",
    ],
)

# Flat tar used by the FreeDOS data disk (mformat / mcopy). Keeps the
# boot bundle and extras together since FAT16 is one volume.
pkg_tar(
    name = "fs_tar_proprietary",
    files = _BASE_FILES,
    srcs = [":lnk_bin_" + a for a in _BUSYBOX_APPLETS],
    deps = [
        "//apps/games:tar",
        ":tc_tar",
        ":tp70_tar",
        "//apps-proprietary:tar",
    ],
)

# Disk image layout (used by both image and image_proprietary):
#   sector 0           bootloader/MBR (with patched partition table)
#   sector 1..         boot bundle TAR (kernel + DN + TC + COMMAND.C)
#   sector EXT4_START  ext4 partition: extras + games (+ proprietary)
# The kernel scans the MBR, mounts ext4 as root, and the TAR at /boot/.
#
# EXT4_START leaves 32 MiB of headroom for the boot bundle. Anything bigger
# should live on ext4.
_DISK_CMD = """
    set -euo pipefail

    EXT4_START=65536               # 32 MiB / 512
    EXT4_SECTORS=$$((1024 * 2048)) # 1 GiB / 512

    # Strip the leading TAR header for "A" so byte 0 of the partition
    # is the bootloader (which embeds the MBR + partition table at the
    # tail of its first 512 bytes).
    BOOT_RAW=$$(mktemp)
    tail -c +513 $(location :boot_bundle_tar) > "$$BOOT_RAW"

    BOOT_SIZE=$$(stat -c%s "$$BOOT_RAW")
    BOOT_BUDGET=$$(( EXT4_START * 512 ))
    if [ "$$BOOT_SIZE" -gt "$$BOOT_BUDGET" ]; then
        echo "boot_bundle_tar (after MBR strip) is $$BOOT_SIZE B, exceeds boot partition budget $$BOOT_BUDGET B" >&2
        exit 1
    fi

    cp "$$BOOT_RAW" $@
    chmod +w $@
    truncate -s $$(( (EXT4_START + EXT4_SECTORS) * 512 )) $@
    rm -f "$$BOOT_RAW"

    EXT4_IMG=$$(mktemp)
    EXTRACT_DIR=$$(mktemp -d)
    tar xf $(EXTRAS_TAR) -C "$$EXTRACT_DIR"
    truncate -s $$(( EXT4_SECTORS * 512 )) "$$EXT4_IMG"
    mkfs.ext4 -q -b 4096 -L "RetroOS" -d "$$EXTRACT_DIR" "$$EXT4_IMG"
    rm -rf "$$EXTRACT_DIR"
    dd if="$$EXT4_IMG" of=$@ bs=512 seek=$$EXT4_START conv=notrunc 2>/dev/null
    rm "$$EXT4_IMG"

    # Patch MBR partition table: entry 1 (boot TAR) needs a real size so
    # strict BIOSes (86box) accept the disk; entry 2 announces ext4 for
    # the kernel's MBR scan.
    python3 -c "
import struct
with open('$@', 'r+b') as f:
    f.seek(0x1BE)
    p1 = f.read(16)
    p1_lba = struct.unpack_from('<I', p1, 8)[0]
    p1_size = $$EXT4_START - p1_lba
    f.seek(0x1BE + 12)
    f.write(struct.pack('<I', p1_size))
    f.seek(0x1CE)
    f.write(struct.pack('<BBBBBBBBII',
        0x00, 0,0,0, 0x83, 0,0,0,
        $$EXT4_START, $$EXT4_SECTORS))
    "
"""

genrule(
    name = "image",
    srcs = [":boot_bundle_tar", ":extras_tar"],
    outs = ["image.bin"],
    cmd = _DISK_CMD.replace("$(EXTRAS_TAR)", "$(location :extras_tar)"),
)

genrule(
    name = "image_proprietary",
    srcs = [":boot_bundle_tar", ":extras_tar_proprietary"],
    outs = ["image_proprietary.bin"],
    cmd = _DISK_CMD.replace("$(EXTRAS_TAR)", "$(location :extras_tar_proprietary)"),
)

# FAT16 data disk for FreeDOS (all apps from the proprietary TAR)
genrule(
    name = "freedos_apps",
    srcs = [
        ":fs_tar_proprietary",
        "freedos/quake/CWSDPMI.EXE",
        "freedos/ctmouse/CTMOUSE.EXE",
        "freedos/hx/HDPMI16.EXE",
        "freedos/hx/HDPMI32.EXE",
        "freedos/hx/SETUPBC.BAT",
    ],
    outs = ["freedos_apps.img"],
    cmd = """
        IMG="$$(pwd)/$@"
        # 1GB FAT16 superfloppy: BORLANDC + games push past 256MB.
        dd if=/dev/zero of="$$IMG" bs=1M count=1024 status=none
        mformat -i "$$IMG" -c 32 -h 16 -s 63 -T $$((1024 * 2048)) ::

        # Extract TAR and copy files to FAT image
        TMPDIR=$$(mktemp -d)
        tar xf "$$(pwd)/$(location :fs_tar_proprietary)" -C "$$TMPDIR"
        # Skip non-DOS files (kernel, ELF binaries, md5, bootloader)
        cd "$$TMPDIR"
        for f in $$(find . -type f | sort); do
            # Skip kernel/bootloader/ELF/linux files
            case "$$f" in
                ./A|./kernel.elf|./kernel.elf.md5|./shell.elf) continue ;;
                ./TESTS/printmsg.elf|./TESTS/stress.elf|./TESTS/stress64.elf) continue ;;
                ./TESTS/HI.ELF|./TESTS/HI64.ELF) continue ;;
            esac
            DIR=$$(dirname "$$f" | sed 's|^\\./||')
            if [ "$$DIR" != "." ]; then
                # Create all parent dirs
                P=""
                IFS=/; for COMP in $$DIR; do
                    P="$${P:+$$P/}$$COMP"
                    mmd -D s -i "$$IMG" "::$$P" 2>/dev/null || true
                done
                unset IFS
            fi
            mcopy -D o -i "$$IMG" "$$f" "::$$f" 2>/dev/null || true
        done
        cd - >/dev/null
        rm -rf "$$TMPDIR"

        # Drop CWSDPMI.EXE at D:\\ root so it's on the PATH for any DOS/4GW
        # game (DOS/4GW probes a loaded DPMI host before falling back to its
        # own embedded mode-switching). Run `CWSDPMI -p` in AUTOEXEC.BAT or
        # the prompt to load it resident before launching the game.
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/quake/CWSDPMI.EXE" "::CWSDPMI.EXE"

        # FreeDOS CTMOUSE driver at D:\\CTMOUSE.EXE. Run `CTMOUSE` before
        # launching mouse-aware games (e.g. Indy: Fate of Atlantis) to
        # install an INT 33h handler.
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/ctmouse/CTMOUSE.EXE" "::CTMOUSE.EXE"

        # Japheth HX HDPMI16/HDPMI32 — open-source 16/32-bit DPMI hosts at
        # D:\\HDPMI16.EXE / D:\\HDPMI32.EXE. Load `HDPMI16` (TSR) before
        # BCC.EXE so BCC's runtime sees an existing DPMI host via INT 2F
        # AX=1687h instead of installing its own DPMI16BI.OVL — useful
        # for diagnosing whether a BCC behavior is host-side (DPMI16BI
        # quirk) or BCC-side (would reproduce under HDPMI16 too).
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/hx/HDPMI16.EXE" "::HDPMI16.EXE"
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/hx/HDPMI32.EXE" "::HDPMI32.EXE"
        # SETUPBC.BAT — sets PATH/INCLUDE/LIB for BCC on D: (FreeDOS).
        # Run `D:\\SETUPBC` once after booting to make BCC find its headers.
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/hx/SETUPBC.BAT" "::SETUPBC.BAT"
    """,
)

# GRUB bootable ISO (requires grub-mkrescue and mtools)
# Boot: qemu -cdrom retroos_grub.iso -drive file=image_ext4.bin,snapshot=on -boot order=d
genrule(
    name = "grub_iso",
    srcs = ["//kernel:kernel_elf"],
    outs = ["retroos_grub.iso"],
    cmd = """
        DIR=$$(mktemp -d)
        mkdir -p "$$DIR/boot/grub"
        cp $< "$$DIR/boot/kernel.elf"
        cat > "$$DIR/boot/grub/grub.cfg" << 'GRUBCFG'
set timeout=1
insmod vbe
insmod vga
set gfxpayload=text
menuentry "RetroOS" {
    multiboot /boot/kernel.elf
    boot
}
GRUBCFG
        grub-mkrescue -o $@ "$$DIR"
        rm -rf "$$DIR"
    """,
)

# Run QEMU with the disk image
sh_binary(
    name = "run",
    srcs = ["run_qemu.sh"],
    data = [":image"],
)
