load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_mklink")

exports_files(["i686-retro-none.json", "hostfs.py"])

# Convenient applet shims for busybox: each is a tar symlink "bin/<name>"
# pointing at "busybox" (relative within /bin), so PATH=/bin lookup of
# `ls`, `cat`, etc. resolves to the busybox binary which dispatches via
# basename(argv[0]).
_BUSYBOX_APPLETS = [
    "ls", "cat", "cp", "mv", "rm", "mkdir", "rmdir", "ln", "touch",
    "echo", "printf", "pwd", "true", "false",
    "grep", "sed", "awk", "wc", "sort", "uniq", "head", "tail", "cut", "tr",
    "find", "du", "df", "stat", "chmod",
    "ps", "kill", "sleep", "time", "id", "tty", "uname",
    "cmp", "diff", "tar", "gzip", "gunzip", "dd",
    "vi", "ed", "more", "less",
    "sh", "ash", "env", "which", "test", "[",
]

[pkg_mklink(
    name = "lnk_bin_" + a,
    link_name = "bin/" + a,
    target = "busybox",
) for a in _BUSYBOX_APPLETS]

# Pristine drop-in dirs: contents auto-shipped under the given DOS prefix.
# Drop files into apps-boot/tc/ or apps/TP70/ and they appear at C:\TC\... or
# C:\TP70\... in the image on the next build — no per-file wiring.
_TC_SRCS = glob(["apps-boot/tc/**/*"], allow_empty = True)
_TP70_SRCS = glob(["apps/TP70/**/*"], allow_empty = True)

pkg_tar(
    name = "tc_tar",
    files = {":" + s: "TC/" + s[len("apps-boot/tc/"):].upper() for s in _TC_SRCS},
)

pkg_tar(
    name = "tp70_tar",
    files = {":" + s: "TP70/" + s[len("apps/TP70/"):].upper() for s in _TP70_SRCS},
)

# Compute MD5 of kernel ELF
genrule(
    name = "kernel_md5",
    srcs = ["//kernel:kernel_elf"],
    outs = ["kernel.elf.md5"],
    cmd = "md5sum $< | cut -d' ' -f1 | xxd -r -p > $@",
)

genrule(
    name = "kernel_md5_bare",
    srcs = ["//kernel:kernel_elf_bare"],
    outs = ["kernel_bare.elf.md5"],
    cmd = "md5sum $< | cut -d' ' -f1 | xxd -r -p > $@",
)

# DN file manager — shipped both in the boot bundle (disk boots) and in the
# kernel's embedded bootfs (diskless boots).
_DN_FILES = {
    "apps-boot/dn/DN." + ext: "DN/DN." + ext
    for ext in ["COM", "PRG", "OVR", "DLG", "LNG", "HLP", "EDT", "EXT",
                "HGL", "MNU", "VWR", "XRN", "FLG", "HIS"]
}

# The kernel's embedded boot filesystem: DN + COMMAND.COM + a fallback
# CONFIG.SYS — the environment that is always there. Linked into kernel.elf
# as raw bytes (//kernel:bootfs_obj) and mounted at /boot/ when no TAR boot
# partition exists, so a bare kernel.elf booted from any multiboot loader
# (someone's existing GRUB) comes up with a usable system, no RetroOS disk
# required.
_BOOTFS_FILES = {
    "//apps-boot/command:command_com": "COMMAND.COM",
    "etc/CONFIG.BOOTFS": "CONFIG.SYS",
}
_BOOTFS_FILES.update(_DN_FILES)

pkg_tar(
    name = "bootfs_tar",
    files = _BOOTFS_FILES,
    visibility = ["//kernel:__pkg__"],
)

# Boot bundle (small TAR, partition 1): the LEGACY BOOTLOADER's kernel
# source only — the MBR stage reads kernel.elf (+ md5) from it. The kernel
# itself never mounts it: /boot is always the embedded bootfs, on top of
# whatever the root is. Everything else lives on ext4.
_BOOT_FILES = {
    "//boot:bootloader_bin": "A",
    ":kernel_md5": "kernel.elf.md5",
    "//kernel:kernel_elf": "kernel.elf",
}

# image_min's boot bundle: the bare kernel (no embedded bootfs). The in-OS
# toolchain genrules (//apps-boot/command:command_com, //apps/dosrt:stub_exe)
# boot image_min, and the full kernel embeds COMMAND.COM — swapping in the
# bare kernel here is what keeps that acyclic.
_BOOT_FILES_MIN = dict(_BOOT_FILES)
_BOOT_FILES_MIN.pop("//kernel:kernel_elf")
_BOOT_FILES_MIN.pop(":kernel_md5")
_BOOT_FILES_MIN["//kernel:kernel_elf_bare"] = "kernel.elf"
_BOOT_FILES_MIN[":kernel_md5_bare"] = "kernel.elf.md5"

# Extras (live on ext4 in the boot+ext4 image, or alongside boot files in the
# monolithic open-source image). Linux-personality binaries, test programs,
# and busybox.
_EXTRA_FILES = {
    "etc/CONFIG.SYS": "CONFIG.SYS",
    # In-OS tinkering source for COMMAND.COM (used to ride the boot TAR).
    "//apps-boot/command:command.c": "SRC/COMMAND.C",
    # Prebuilt by in-OS TCC at image-build time (it used to be self-built at
    # every boot); DN's "COMMAND.COM /C ..." EXECs this from C:\.
    "//apps-boot/command:command_com": "COMMAND.COM",
    "freedos/dos32a/dos32a.exe":         "DOS32A.EXE",
    "//apps-boot/command:LOADFIX.CFG": "LOADFIX.CFG",
    "//apps/shell:shell_elf": "shell.elf",
    "//apps/tests/printmsg:printmsg_elf":   "TESTS/printmsg.elf",
    "//apps/tests/stress:stress_elf":       "TESTS/stress.elf",
    "//apps/tests/stress64:stress64_elf":   "TESTS/stress64.elf",
    "//apps/tests/hello_com:hello_com":     "TESTS/HELLO.COM",
    "//apps/tests/gfx_com:gfx_com":         "TESTS/GFX.COM",
    "//apps/tests/hello_com:TEST.BAT":      "TESTS/TEST.BAT",
    "//apps/tests/trexec:trexec_com":       "TESTS/TREXEC.COM",
    "//apps/tests/hello32_linux:hello32_linux": "TESTS/HI.ELF",
    "//apps/tests/hello64_linux:hello64_linux": "TESTS/HI64.ELF",
    # DPMI smoke-test fixture (compiled by BCC in test/dpmi_smoke.sh).
    "test/dpmi/hello.c":                    "TESTS/DPMIHI.C",
    # SB DMA test: MODPLAY.EXE (stub + Rust payload) supersedes the C
    # `sbtest` -- modplay drives the same SB+8237 in both poll and IRQ
    # modes. RLOADER.BIN is the in-OS PM loader the stub fopens from cwd.
    # No build cycle: `image_min` (used to build the stub) uses
    # _MIN_EXTRA_FILES below, not these.
    "//apps/tests/modplay:modplay_exe":     "TESTS/MODPLAY.EXE",
    "//apps/dosrt:dosrt_exe":               "TESTS/DOSRT.EXE",
    "//apps/dosrt:rloader_bin":             "TESTS/RLOADER.BIN",
    # Static i686 busybox — single-binary Unix userland (sh + coreutils).
    # Standalone-shell mode dispatches applets via basename(argv[0]); the
    # binary's compiled-in re-exec path is /bin/busybox, hence the location.
    "//apps/busybox:busybox":               "bin/busybox",
}

# Minimum extras needed for the stub-build image (//apps/dosrt:stub_exe
# boots //:image_min and runs in-OS TCC from ext4 /TC;
# CONFIG.SYS supplies the PATH
# (= C:\;C:\BOOT\TC;C:\BORLANDC\BIN) so TCC can find TLINK.EXE. Keeping
# this tiny avoids the image→modplay→stub_exe→image cycle that would
# otherwise force a separate `dosrt_tar` indirection.
_MIN_EXTRA_FILES = {
    "etc/CONFIG.SYS": "CONFIG.SYS",
    # In-OS tinkering source for COMMAND.COM (used to ride the boot TAR).
    "//apps-boot/command:command.c": "SRC/COMMAND.C",
}

# Monolithic file map for the open-source image and FreeDOS apps disk —
# both consume a single flat tar. The proprietary image splits these
# back into boot_bundle_tar + extras_tar_proprietary.
_BASE_FILES = dict(_BOOT_FILES)
_BASE_FILES.update(_EXTRA_FILES)

# Boot bundle: just enough to bring up DN + the in-OS TC self-build.
# Becomes partition 1 (type 0xDA); mounts at /boot/. Same bundle for both
# the open-source and proprietary images.
pkg_tar(
    name = "boot_bundle_tar",
    files = _BOOT_FILES,
)

pkg_tar(
    name = "boot_bundle_min_tar",
    files = _BOOT_FILES_MIN,
)

# Just enough on ext4 for the stub-build image: CONFIG.SYS (for TCC's
# PATH) and the TC toolchain itself (the boot TAR is bootloader-only now).
# Used only by image_min; keeps the build acyclic.
pkg_tar(
    name = "extras_min_tar",
    files = _MIN_EXTRA_FILES,
    deps = [":tc_tar"],
)

# Extras populated into the ext4 partition: busybox-userland, Linux test
# ELFs, DOS games (shareware), Turbo Pascal, and the modplay/RLOADER
# binaries listed in _EXTRA_FILES.
pkg_tar(
    name = "extras_tar",
    files = _EXTRA_FILES,
    srcs = [":lnk_bin_" + a for a in _BUSYBOX_APPLETS],
    deps = [
        "//apps/games:tar",
        ":tc_tar",
        ":tp70_tar",
    ],
)

# Same extras plus the proprietary game/tooling drop. (No hard-coded
# MOD file — modplay takes the module path as argv[1].) CONFIG.SYS is dropped
# from the file map so apps-proprietary's own CONFIG.SYS (PATH without
# C:\TC, since BC is the compiler) is the ONLY one: pkg_tar lets `files`
# win over `deps` on a duplicate path, so the default would otherwise shadow it.
_EXTRA_FILES_PROPRIETARY = {k: v for k, v in _EXTRA_FILES.items() if k != "etc/CONFIG.SYS"}
pkg_tar(
    name = "extras_tar_proprietary",
    files = _EXTRA_FILES_PROPRIETARY,
    srcs = [":lnk_bin_" + a for a in _BUSYBOX_APPLETS],
    deps = [
        "//apps/games:tar",
        ":tc_tar",
        ":tp70_tar",
        "//apps-proprietary:tar",
    ],
)

# Flat tar used by the FreeDOS data disk (mformat / mcopy). Keeps the
# boot bundle and extras together since FAT16 is one volume.
pkg_tar(
    name = "fs_tar_proprietary",
    files = _BASE_FILES,
    srcs = [":lnk_bin_" + a for a in _BUSYBOX_APPLETS],
    deps = [
        "//apps/games:tar",
        ":tc_tar",
        ":tp70_tar",
        "//apps-proprietary:tar",
    ],
)

# Disk image layout (used by both image and image_proprietary):
#   sector 0           bootloader/MBR (with patched partition table)
#   sector 1..         boot bundle TAR (kernel.elf for the MBR loader only)
#   sector EXT4_START  ext4 partition: extras + TC + games (+ proprietary)
# The kernel scans the MBR for the ext4 root; /boot is the embedded bootfs.
#
# EXT4_START leaves 32 MiB of headroom for the boot bundle. Anything bigger
# should live on ext4.
_DISK_CMD = """
    set -euo pipefail

    EXT4_START=65536               # 32 MiB / 512
    EXT4_SECTORS=$$((1024 * 2048)) # 1 GiB / 512

    # Strip the leading TAR header for "A" so byte 0 of the partition
    # is the bootloader (which embeds the MBR + partition table at the
    # tail of its first 512 bytes).
    BOOT_RAW=$$(mktemp)
    tail -c +513 $(BOOT_TAR) > "$$BOOT_RAW"

    BOOT_SIZE=$$(stat -c%s "$$BOOT_RAW")
    BOOT_BUDGET=$$(( EXT4_START * 512 ))
    if [ "$$BOOT_SIZE" -gt "$$BOOT_BUDGET" ]; then
        echo "boot_bundle_tar (after MBR strip) is $$BOOT_SIZE B, exceeds boot partition budget $$BOOT_BUDGET B" >&2
        exit 1
    fi

    cp "$$BOOT_RAW" $@
    chmod +w $@
    truncate -s $$(( (EXT4_START + EXT4_SECTORS) * 512 )) $@
    rm -f "$$BOOT_RAW"

    EXT4_IMG=$$(mktemp)
    EXTRACT_DIR=$$(mktemp -d)
    tar xf $(EXTRAS_TAR) -C "$$EXTRACT_DIR"
    truncate -s $$(( EXT4_SECTORS * 512 )) "$$EXT4_IMG"
    mkfs.ext4 -q -b 4096 -L "RetroOS" -d "$$EXTRACT_DIR" "$$EXT4_IMG"
    rm -rf "$$EXTRACT_DIR"
    dd if="$$EXT4_IMG" of=$@ bs=512 seek=$$EXT4_START conv=notrunc 2>/dev/null
    rm "$$EXT4_IMG"

    # Patch MBR partition table: entry 1 (boot TAR) needs a real size so
    # strict BIOSes (86box) accept the disk; entry 2 announces ext4 for
    # the kernel's MBR scan.
    python3 -c "
import struct
with open('$@', 'r+b') as f:
    f.seek(0x1BE)
    p1 = f.read(16)
    p1_lba = struct.unpack_from('<I', p1, 8)[0]
    p1_size = $$EXT4_START - p1_lba
    f.seek(0x1BE + 12)
    f.write(struct.pack('<I', p1_size))
    f.seek(0x1CE)
    f.write(struct.pack('<BBBBBBBBII',
        0x00, 0,0,0, 0x83, 0,0,0,
        $$EXT4_START, $$EXT4_SECTORS))
    "
"""

# Stub-build image: apps-boot bundle (bare kernel+DN+TC) + just CONFIG.SYS.
# Pulls NO dosrt artifacts and carries the bootfs-free kernel, so
# image→bootfs→COMMAND.COM→image_min (and image→modplay→stub_exe→image_min)
# is not a cycle (image_min's only ext4 content is CONFIG.SYS).
genrule(
    name = "image_min",
    srcs = [":boot_bundle_min_tar", ":extras_min_tar"],
    outs = ["image_min.bin"],
    cmd = _DISK_CMD
        .replace("$(BOOT_TAR)", "$(location :boot_bundle_min_tar)")
        .replace("$(EXTRAS_TAR)", "$(location :extras_min_tar)"),
    # Consumed by //apps/dosrt:stub_exe and //apps-boot/command:command_com
    # (the in-OS TC compile host).
    visibility = ["//visibility:public"],
)

genrule(
    name = "image",
    srcs = [":boot_bundle_tar", ":extras_tar"],
    outs = ["image.bin"],
    cmd = _DISK_CMD
        .replace("$(BOOT_TAR)", "$(location :boot_bundle_tar)")
        .replace("$(EXTRAS_TAR)", "$(location :extras_tar)"),
    visibility = ["//visibility:public"],
)

genrule(
    name = "image_proprietary",
    srcs = [":boot_bundle_tar", ":extras_tar_proprietary"],
    outs = ["image_proprietary.bin"],
    cmd = _DISK_CMD
        .replace("$(BOOT_TAR)", "$(location :boot_bundle_tar)")
        .replace("$(EXTRAS_TAR)", "$(location :extras_tar_proprietary)"),
)

# FAT16 data disk for FreeDOS (all apps from the proprietary TAR)
genrule(
    name = "freedos_apps",
    srcs = [
        ":fs_tar_proprietary",
        "freedos/quake/CWSDPMI.EXE",
        "freedos/ctmouse/CTMOUSE.EXE",
        "freedos/hx/HDPMI16.EXE",
        "freedos/hx/HDPMI16D.EXE",
        "freedos/hx/HDPMI32.EXE",
        "freedos/hx/SETUPBC.BAT",
    ],
    outs = ["freedos_apps.img"],
    cmd = """
        IMG="$$(pwd)/$@"
        # 1GB FAT16 superfloppy: BORLANDC + games push past 256MB.
        dd if=/dev/zero of="$$IMG" bs=1M count=1024 status=none
        mformat -i "$$IMG" -c 32 -h 16 -s 63 -T $$((1024 * 2048)) ::

        # Extract TAR and copy files to FAT image
        TMPDIR=$$(mktemp -d)
        tar xf "$$(pwd)/$(location :fs_tar_proprietary)" -C "$$TMPDIR"
        # Skip non-DOS files (kernel, ELF binaries, md5, bootloader)
        cd "$$TMPDIR"
        for f in $$(find . -type f | sort); do
            # Skip kernel/bootloader/ELF/linux files
            case "$$f" in
                ./A|./kernel.elf|./kernel.elf.md5|./shell.elf) continue ;;
                ./TESTS/printmsg.elf|./TESTS/stress.elf|./TESTS/stress64.elf) continue ;;
                ./TESTS/HI.ELF|./TESTS/HI64.ELF) continue ;;
            esac
            DIR=$$(dirname "$$f" | sed 's|^\\./||')
            if [ "$$DIR" != "." ]; then
                # Create all parent dirs
                P=""
                IFS=/; for COMP in $$DIR; do
                    P="$${P:+$$P/}$$COMP"
                    mmd -D s -i "$$IMG" "::$$P" 2>/dev/null || true
                done
                unset IFS
            fi
            mcopy -D o -i "$$IMG" "$$f" "::$$f" 2>/dev/null || true
        done
        cd - >/dev/null
        rm -rf "$$TMPDIR"

        # Drop CWSDPMI.EXE at D:\\ root so it's on the PATH for any DOS/4GW
        # game (DOS/4GW probes a loaded DPMI host before falling back to its
        # own embedded mode-switching). Run `CWSDPMI -p` in AUTOEXEC.BAT or
        # the prompt to load it resident before launching the game.
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/quake/CWSDPMI.EXE" "::CWSDPMI.EXE"

        # FreeDOS CTMOUSE driver at D:\\CTMOUSE.EXE. Run `CTMOUSE` before
        # launching mouse-aware games (e.g. Indy: Fate of Atlantis) to
        # install an INT 33h handler.
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/ctmouse/CTMOUSE.EXE" "::CTMOUSE.EXE"

        # Japheth HX HDPMI16/HDPMI32 — open-source 16/32-bit DPMI hosts at
        # D:\\HDPMI16.EXE / D:\\HDPMI32.EXE. HDPMI16D.EXE is a local
        # debug build with port E9 trace output. Load `HDPMI16` (TSR) before
        # BCC.EXE so BCC's runtime sees an existing DPMI host via INT 2F
        # AX=1687h instead of installing its own DPMI16BI.OVL — useful
        # for diagnosing whether a BCC behavior is host-side (DPMI16BI
        # quirk) or BCC-side (would reproduce under HDPMI16 too).
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/hx/HDPMI16.EXE" "::HDPMI16.EXE"
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/hx/HDPMI16D.EXE" "::HDPMI16D.EXE"
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/hx/HDPMI32.EXE" "::HDPMI32.EXE"
        # SETUPBC.BAT — sets PATH/INCLUDE/LIB for BCC on D: (FreeDOS).
        # Run `D:\\SETUPBC` once after booting to make BCC find its headers.
        mcopy -D o -i "$$IMG" "$$(pwd)/freedos/hx/SETUPBC.BAT" "::SETUPBC.BAT"
    """,
)

# GRUB bootable ISO (requires grub-mkrescue and mtools)
# Boot: qemu -cdrom retroos_grub.iso -drive file=image_ext4.bin,snapshot=on -boot order=d
genrule(
    name = "grub_iso",
    srcs = ["//kernel:kernel_elf"],
    outs = ["retroos_grub.iso"],
    cmd = """
        DIR=$$(mktemp -d)
        mkdir -p "$$DIR/boot/grub"
        cp $< "$$DIR/boot/kernel.elf"
        cat > "$$DIR/boot/grub/grub.cfg" << 'GRUBCFG'
set timeout=1
insmod vbe
insmod vga
set gfxpayload=text
menuentry "RetroOS" {
    multiboot /boot/kernel.elf
    boot
}
GRUBCFG
        grub-mkrescue -o $@ "$$DIR"
        rm -rf "$$DIR"
    """,
)

# Run QEMU with the disk image
sh_binary(
    name = "run",
    srcs = ["run_qemu.sh"],
    data = [":image"],
)
